# ciphr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: examples.md  installation.md  specification.yaml
src/ciphr/: __init__.py
tests/: test_ciphr.py
