[project]
name = "ciphr"
version = "0.1.0"
description = "A Python port of frohoff/ciphr for encoding, decoding, and cryptographic operations."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=42.0.0",
]

[project.scripts]
ciphr = "ciphr.cli:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>24.0.0",
    "flake8>=7.0.0",
    "tox>=4.0.0",
    "sphinx>=7.0.0",
]